# ChatAI-CRUD

./: .gitignore  langgraph.json  pyproject.toml  readme.md  requirements.txt
backend/app/agents/tools/: tool.py
backend/app/api/routes/: file_routes.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: file_log.py
backend/app/services/: auth_services.py  file_services.py
backend/app/tools/: file_tools.py
backend/app/utils/: file_safetly.py  file_safety.py
backend/storage/: after_jwt.txt
backend/storage/prateek/: testing.txt
src/agent/app/: main.py
src/agent/app/agents/: graph.py  model.py  nodes.py  prompts.py  state.py
src/agent/app/agents/tools/: registry.py  tool.py
src/agent/app/api/routes/: auth_routes.py  file_routes.py
src/agent/app/core/: security.py
src/agent/app/db/: session.py
src/agent/app/models/: file_log.py  user.py
src/agent/app/schemas/: auth_schema.py  file_schema.py
src/agent/app/services/: auth_services.py  file_services.py
src/agent/app/tools/: file_tools.py
src/agent/app/utils/: file_safety.py
storage/rohit/: rohit_file1.txt
