[project]
name = "agent"
version = "0.0.1"
description = "LangGraph AI Agent"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # Core LangGraph
    "langgraph>=1.0.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-groq>=0.2.0",
    "langsmith>=0.1.0",
    # API Server
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    # Environment variables
    "python-dotenv>=1.0.1",
    # Database
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    # Authentication
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    # Data
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    # Tokenizer
    "tiktoken>=0.7.0",
    # Notebook/debugging
    "ipython>=8.0.0",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.14",
    "pytest>=8.3.5",
    "ruff>=0.8.2",
    "mypy>=1.13.0",
    "anyio>=4.7.0",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agent"]

[tool.setuptools.package-dir]
"agent" = "src/agent"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
